--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <section class="top-banner">
-        <div class="half-width">
+        <div class="half-width first-side">
             <h2>Hello I`m</h2>
             <h3>Mohiuddin Patwary</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work</p>
             <a class="link-button" target="-block" href="https://surokkha.gov.bd/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="mohi.png" alt="MOhiuddin Patwary">
+            <img src="images/mohi.png" alt="MOhiuddin Patwary">
         </div>
     </section>
     <section class="Biography">
-        <div class="half-width">
-            <img src="mohi-dream.png" alt="Mohiuddin Patwary">
+        <div class="half-width first-side">
+            <img src="images/mohi-dream.png" alt="Mohiuddin Patwary">
         </div>
         <div class="half-width">
             <h1>Biography</h1>
